[tool.poetry]
name = "contextlib3"
version = "3.10.0"
description = "Backport of Python 3.10 standard library’s contextlib module to other python 3 versions"
authors = ["Tom Gringauz <tomgrin10@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/tomgrin10/contextlib3"
documentation = ""

keywords = ["contextlib", "backport", "async"]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Utilities',
    'Typing :: Typed'
]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
